Fix running on mobile

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   background-color: #eee;
   padding: 2px 10px;
   font-size: 12px;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
 }
 
 .player_fullscreen .player__controls {
@@ -105,7 +105,7 @@ body {
 .analyser {
   display: none;
   position: absolute;
-  top: 30px;
+  bottom: 0;
   right: 0;
   background-color: #000;
 }
